Creating schema and table if necessary, also using docker for DB and core

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,5 @@
 postgres = {
-  url = "jdbc:postgresql:postgres"
+  url = "jdbc:postgresql://vdmapi_db_1/postgres"
   driver = org.postgresql.Driver
   connectionPool = disabled
   keepAliveConnection = true
@@ -9,3 +9,7 @@ postgres = {
     password = "admin"
   }
 }
+
+play.http.secret.key="demosecret"
+
+play.modules.enabled += "modules.AppModule"
