--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       POSTGRES_PASSWORD: admin
   vdmapi:
     image: vdmapi:0.1-SNAPSHOT
+    depends_on:
+      - db
     ports:
       - 9000:9000
     restart: always
